# pyexamples

./: 10_bool.py  11_if.py  12_functions.py  13_functions_p2.py  14_lists.py  15_lists.py  16_lists.py  17_exceptions.py  18_loops.py  19_sorting.py  20_list.py  21_range.py  22_dictionary.py  23_tuples.py  24_files.py  25_files.py  26_modules.py  27_exceptions.py  2_pystring.py  3_pystring_index.py  4_functions.py  5_oop.py  6_str_concat.py  7_fmt_string.py  8_userinput.py  9_numbers.py  Makefile  README.md  fmod2.py  fnmod.py  pyproject.toml  setup.cfg
28_decorators/: deco.py  deco2.py
29_generators/: gen.py
inherit/: in1.py
modules/: caller.py  env.sh
unittest/: upper.py  upper_test.py
