[metadata]
name = python examples
version = 1.0.0
description = Examples of python 3 code
author = linuxmonk
url = https://github.com/linuxmonk/pyexamples.git
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
   
[options]
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    pre-commit>=2.4.0
    black
